<resources>
    <string name="app_name">coffeeApp</string>
    <string name="end_message">end_message</string>
    <string name="good_day">Good day!</string>
    <string name="one">ONE</string>
    <string name="two">TWO</string>
    <string name="three">THREE</string>
    <string name="four">FOUR</string>
    <string name="five">FIVE</string>
    <string name="coffee_type_1">coffee_type_1</string>
    <string name="coffee_type_2">coffee_type_2</string>
    <string name="coffee_type_3">coffee_type_3</string>
    <string name="coffee_type_4">coffee_type_4</string>
    <string name="coffee_type_5">coffee_type_5</string>
    <string name="coffee_type_6">coffee_type_6</string>
    <string name="your_order">Your Order:</string>
    <string name="make_an_order">Make An Order!</string>
    <string name="no_milk">No Milk</string>
    <string name="cow_milk">Cow Milk</string>
    <string name="soy_milk">Soy Milk</string>
    <string name="coffee_degree">Coffee Degree</string>
    <string name="sugar">Sugar</string>
    <string name="milk">Milk</string>
    <string name="temperature">Temperature</string>
    <string name="applogo">app logo</string>
    <string name="your_usual">your usual?</string>
    <string name="type">Type</string>
    <string name="backrounds_lines">backround_lines</string>
    <string name="line_done">line_done</string>
    <string name="registration_button_text">registration</string>
    <string name="name_field">Name:</string>
    <string name="enter_your_nickname_message">enter your nickname</string>
    <string name="enter_your_phone_number_message_blank_message">enter your phone number</string>
    <string name="phone_field">Phone:</string>
    <string name="employeeid_field">EmployeeID:</string>
    <string name="employeeid_field_blank_message">enter your Gindi employee ID</string>
    <string name="registration_title">Registration</string>
    <string name="register">register</string>
    <string name="done">Done</string>
    <string name="intensity_regular">Intensity: Regular</string>
    <string name="sugar_no_sugar">Sugar: No Sugar</string>
    <string name="milk_no_milk">Milk: No Milk</string>
    <string name="size_small">Size: Small</string>
    <string name="size">Size</string>
    <string name="intensity">Intensity</string>
    <string name="hint_location_field">Your current location (tap to edit)</string>
    <string name="personal_info">Personal Info</string>
    <string name="deliver_image">deliver_image</string>
    <string name="order_text">Order</string>
    <string name="where_ever_you_go">Where Ever You GO...</string>
    <string name="at">At:</string>
    <string name="send_to">Send To:</string>
    <string name="your_order_title_checkout">Your Order:</string>
    <string name="type_select_prompt_message">Type: Please Select</string>

</resources>
